# senior-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
notebooks/: download_csv.py  download_fits.ipynb  final_output.fits  read_fits.ipynb  skyserver-dump.csv  temperatures.ipynb
src/: stargaze.cu
